[package]
name = "antechamber"
publish = false
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
complexity = "deny"
nursery = "deny"
pedantic = "deny"
style = "deny"
unwrap_used = "deny"
cargo_common_metadata = "deny"

[dependencies]
iced = { version = "0.14.*", features = ["default", "svg", "tokio"] }
serde = { version = "1.0.*", features = ["derive"] }
directories = "6.0.*"
serde_yaml = "0.9.33"

[features]
dev_mode = ["iced/time-travel"]
